[tool.poetry]
name = "loop-docs"
version = "0"
description = "Documentation for Loop"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "9.1.0"
sphinx-autobuild = "2025.8.25"
sphinxext-opengraph = "0.13.0"
proselint = "0.16.0"
furo = "2025.12.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
